Desvinculamos de los endpoints los storeId, ya lo coge del token auto
